🐛 fix missed/wrong collapse behavior on logout or click to link actions and collapse navigation bar

--- a/src/components/dashboard/nvagation-bar/navigation-sections.scss
+++ b/src/components/dashboard/nvagation-bar/navigation-sections.scss
@@ -128,3 +128,10 @@
         @include toggle--vertical-animation;
     }
 }
+
+nav.none,
+nav.collapsed {
+    .nav-section-actions {
+        transition: none;
+    }
+}
